# TinyCPU

./: .gitignore  .gitmodules  CMakeLists.txt  history.txt
.github/workflows/: cmake.yml
assets/: fib.raw  gen_matrix.py  impl_1  lab1.dbin  lab1.elf  lab2.dbin  lab3.S  lab3.dbin  lab3_test.py  lab3_teststd.py  matrix.S  matrix.c  matrix.elf  matrix.in  perf.S  perf.dbin  test.raw
assets/lab2/: lab2.S  lab2.elf  lab2d.S
assets/problem/: complie_raw.sh  p2020.S  p2021.S
assets/problem/2020/: p2020.S  p2020.c  p2020.elf
assets/problem/2021/: p2021.c  p2021.elf
assets/problem/2022/: p2022.c
assets/problem/lib/: bs.c  builtin.c  sort.c
src/: CMakeLists.txt
src/difftest/: CMakeLists.txt
src/difftest/include/: CpuBase.h  CpuRefImpl.h  CpuTracer.h  PerfTracer.h  Status.h  Structs.h  ThreadRaii.h  Tools.h  defines.h  tools.h
src/difftest/src/: CpuRefImpl.cpp  PerfTracer.cpp  difftest.cpp
src/sim/: CMakeLists.txt
src/sim/include/: CpuTracer.h  VcdWriter.h  testCase.h  testFactory.h
src/sim/src/: sim_main.cpp  testCase.cpp  testFactory.cpp
test/: CMakeLists.txt  example.cpp  lab1.cpp  lab2.cpp  lab3.cpp  perf.cpp
utils/: io  io.cpp
vsrc/: CMakeLists.txt  add_vsrc.tcl  common.vh  sram_ctl.v  top.v
vsrc/bus/: ex_mem.v  ex_mem0.v  id_ex.v  if_id.v  mem0_mem1.v  mem1_mem2.v  mem_wb.v
vsrc/exe/: alu.v  ex.v  multiplier.v
vsrc/fetch/: if1.v  pc_reg.v
vsrc/id/: id.v  regfile.v
vsrc/mem/: mem.v  mem0.v  mem1.v  mem2.v
vsrc/other/: adder.v  async.v  bridge.v  predictor.v
vsrc/tb/: async_ram.v  dram.v  irom.v  multi_tb.v  tb.v
vsrc/wb/: wb.v
vsrc/xdc/: thinpad_top.xdc
